@@ -3,7 +3,9 @@ TODO
 * Add GeneralGlobalAligner
 * Add GeneralLocalAligner
 * Add AffineLocalAligner
-* Add test suite
+* Add more tests
+* Add const
+* Look into memory management (references instead of pointers?)
 
 Release 0.11.0 - xx
 * Moved the resulting alignment from the AlignmentAlgorithm to the Sequences object.
@@ -13,6 +15,8 @@ Release 0.11.0 - xx
   SmithWaterman -> LinearLocalAligner
   SmithWatermanGotoh -> AffineLocalAligner
   Reason: the implementations differ (slightly) from the algorithms in the literature.
+* Now LinearLocalAligner uses the LinearGapRater.
+* Added a test
 
 Release 0.10.0 - 21 November 2011
 * Now NeedlemanWunschGotoh uses the AffineGapRater.
